[package]
name = "binance-bot"
version = "0.1.0"
authors = ["kgeronim <kevin.geronimo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-binance = "0.3.0"
serde_json = "1.0"
rust_decimal = "1.2.1"
chrono = "0.4.10"
tokio = { version = "0.2", features = ["full"] }